i18n: fix word puzzle in showing shortcut keys to the user

BUG:333135